--- a/Client/Frontend/package.json
+++ b/Client/Frontend/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^7.3.2",
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.2",
+    "axios": "^1.8.4",
     "expo": "~52.0.40",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
