--- a/Client/Frontend/package.json
+++ b/Client/Frontend/package.json
@@ -13,11 +13,15 @@
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.3",
     "axios": "^1.8.4",
     "expo": "~52.0.40",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "~16.0.18",
+    "expo-file-system": "~18.0.12",
     "expo-sharing": "^13.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
